# shopping-assistant-agent-

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  plan.md
backend/: Dockerfile  app.py  config.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  shopping.db  start.py  test_e2e.py
backend/agents/: comparison_agent.py  deal_agent.py  intent_agent.py  price_agent.py  recommendation_agent.py  reflection_agent.py  review_agent.py  search_agent.py
backend/api/: main.py
backend/api/middleware/: error_handler.py  logging.py  rate_limit.py
backend/api/routes/: analytics.py  auth.py  chat.py  products.py  research.py  saved.py
backend/database/: connection.py  models.py  schemas.py  seed.py
backend/database/migrations/: env.py
backend/database/migrations/versions/: 001_initial.py
backend/graph/: state.py  workflow.py
backend/mcp_servers/: __init__.py  base.py  deals_server.py  pricing_server.py  product_server.py  review_server.py
backend/services/: auth.py  llm.py  memory.py  product_search.py  rag.py
backend/static/: chat.html
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_chat.py  test_products.py
backend/tests/integration/: test_mcp.py  test_workflow.py
backend/tests/unit/: test_auth_service.py  test_comparison_agent.py  test_deal_agent.py  test_intent_agent.py  test_memory_service.py  test_price_agent.py  test_rag_service.py  test_recommendation_agent.py  test_reflection_agent.py
docs/: API.md  ARCH.md  DB.md  FLOW.md  IMPL-PLAN.md  PRD.md
(+18 files in other folders)
